Adding tests and refactoring